# ct-math

./: .gitignore  Cargo.toml  README.md
ct_math_test/: .gitignore  Cargo.toml  visualize.m
ct_math_test/src/: ct_matrix.rs  main.rs  normal_matrix.rs
src/: lib.rs  type_boolean.rs  type_integer.rs  type_lambda_calculus.rs
src/matrix/: ct_matrix.rs  mod.rs  normal_matrix.rs  partial_dynamic_matrix.rs
