[package]
name = "ct_math_test"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ct_math = { path = ".." }
rand = "0.7.3"

[profile.release]
opt-level = 3
